--- a/.rhqconfig
+++ b/.rhqconfig
@@ -1,9 +1,9 @@
 # vim: ft=toml ts=2 sw=2 et :
 
 roots = [
-  "~/repos",
+  "~/.rhq",
   "~/.go/src",
   "~/.vim/plugged",
-  "~/.zgen",
+  "$ZPLUG_REPOS",
   "~/.dotfiles"
 ]
