--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ matrix:
       rust: stable
 
     # Linux (AArch64)
-    # - env: TARGET=aarch64-unknown-linux-gnu
-    #   rust: stable
+    - env: TARGET=aarch64-unknown-linux-gnu
+      rust: stable
 
     # macOS
     - env: TARGET=i686-apple-darwin
