--- a/.travis.yml
+++ b/.travis.yml
@@ -56,7 +56,7 @@ matrix:
 install:
   - sh $HOME/rust/lib/rustlib/uninstall.sh
   - ./ci/install.sh "$TARGET" "$TRAVIS_RUST_VERSION"
-  - if [[ "$TRAVIS_OS_NAME" -eq "osx" ]]; then source $HOME/.cargo/env; fi
+  - if [[ "$TRAVIS_OS_NAME" = "osx" ]]; then source $HOME/.cargo/env; fi
 
 script:
   - ./ci/build.sh "$SKIP_TEST"
