--- a/.travis.yml
+++ b/.travis.yml
@@ -91,3 +91,7 @@ notifications:
   email:
     on_success: never
     on_failure: change
+
+cache: cargo
+before_cache:
+  - chmod -R a+r $HOME/.cargo
