--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rhq"
 description = "manages Git repositories"
-version = "0.2.3-pre"
+version = "0.2.3"
 authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
 license = "MIT"
 repository = "https://github.com/ubnt-intrepid/rhq.git"
@@ -24,6 +24,6 @@ toml = "^0.3"
 url = "^1.4.0"
 walkdir = "^1.0.7"
 shlex = "^0.1.1"
-serde = "*"
-serde_derive = "*"
-lazy_static = "*"
+serde = "^0.9.11"
+serde_derive = "^0.9.11"
+lazy_static = "^0.2.5"
