--- a/.travis.yml
+++ b/.travis.yml
@@ -82,12 +82,12 @@ deploy:
       tags: true
       condition: $TRAVIS_RUST_VERSION = stable
 
-  - provider: script
-    script: ./ci/publish.sh "$CRATES_IO_API_KEY"
-    on:
-      tags: true
-      condition: $TRAVIS_RUST_VERSION = stable
-      condition: $TARGET = x86_64-unknown-linux-gnu
+  # - provider: script
+  #   script: ./ci/publish.sh "$CRATES_IO_API_KEY"
+  #   on:
+  #     tags: true
+  #     condition: $TRAVIS_RUST_VERSION = stable
+  #     condition: $TARGET = x86_64-unknown-linux-gnu
 
 notifications:
   email:
