--- a/src/core/config.toml
+++ b/src/core/config.toml
@@ -1,12 +1,13 @@
 # vim: ft=toml ts=2 sw=2 et :
 
 # The path of root directory to manage cloned repositories.
-root = "~/.rhq"
+root = "~/rhq"
 
-# supplemental lookup directories to search local repositories.
-supplements = [
-  "~/.go/src",
+# Lookup directories to search local repositories.
+includes = [
+  "~/rhq",
+  "~/go/src",
   "~/.vim/plugged",
-  "$ZPLUG_REPOS",
-  "~/.dotfiles"
+  "~/.zplug/repos",
+  "~/.dotfiles",
 ]
