--- a/src/core/config.toml
+++ b/src/core/config.toml
@@ -3,11 +3,16 @@
 # The path of root directory to manage cloned repositories.
 root = "~/rhq"
 
-# Lookup directories to search local repositories.
+# Patterns to search local repositories.
 includes = [
   "~/rhq",
   "~/go/src",
   "~/.vim/plugged",
   "~/.zplug/repos",
   "~/.dotfiles",
+]
+
+# Patterns to ignore repositories.
+excludes = [
+  "~/.cache/**/*",
 ]
