--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,5 +26,6 @@ walkdir = "^1.0.7"
 shlex = "^0.1.1"
 serde = "^0.9.11"
 serde_derive = "^0.9.11"
+serde_json = "^0.9.9"
 lazy_static = "^0.2.5"
 glob = "0.2.11"
