--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rhq"
-description = "manages Git repositories"
-version = "0.2.6-pre"
+description = "A repository management tool"
+version = "0.2.6"
 authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
 license = "MIT"
 repository = "https://github.com/ubnt-intrepid/rhq.git"
