--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,17 +16,17 @@ doc = false
 [dependencies]
 clap = "^2.20.3"
 env_logger = "^0.4.0"
-error-chain = "^0.9.0"
+error-chain = "0.11"
 log = "^0.3.6"
 regex = "^0.2.1"
-shellexpand = "^1.0.0"
-toml = "^0.3"
-url = "^1.4.0"
+shellexpand = "1.0"
+toml = "0.4"
+url = "1.5"
 walkdir = "^1.0.7"
-shlex = "^0.1.1"
-serde = "^0.9.11"
-serde_derive = "^0.9.11"
-serde_json = "^0.9.9"
+shlex = "0.1"
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
 lazy_static = "^0.2.5"
 glob = "0.2.11"
-chrono = "0.3"
+chrono = "0.4"
