--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,32 +1,6 @@
-[package]
-name = "rhq"
-description = "A repository management tool"
-version = "0.2.8"
-authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
-license = "MIT"
-repository = "https://github.com/ubnt-intrepid/rhq.git"
-homepage = "https://github.com/ubnt-intrepid/rhq"
-documentation = "https://docs.rs/rhq"
-
-[[bin]]
-name = "rhq"
-path = "src/main.rs"
-doc = false
-
-[dependencies]
-clap = "^2.20.3"
-env_logger = "^0.4.0"
-error-chain = "0.11"
-log = "^0.3.6"
-regex = "^0.2.1"
-shellexpand = "1.0"
-toml = "0.4"
-url = "1.5"
-walkdir = "^1.0.7"
-shlex = "0.1"
-serde = "1.0"
-serde_derive = "1.0"
-serde_json = "1.0"
-lazy_static = "^0.2.5"
-glob = "0.2.11"
-chrono = "0.4"
+[workspace]
+members = [
+  "src/rhq",
+  "src/rhq-cli",
+  "src/rhq-codegen",
+]
