--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ matrix:
   include:
     # Linux
     - env: TARGET=x86_64-unknown-linux-gnu
-    - env: TARGET=x86_64-unknown-linux-musl
+    - env: TARGET=x86_64-unknown-linux-musl DISABLE_TESTS=1
 
     # OSX
     - env: TARGET=x86_64-apple-darwin
@@ -30,7 +30,7 @@ matrix:
     - env: TARGET=x86_64-unknown-freebsd DISABLE_TESTS=1
 
     # Other architectures
-    - env: TARGET=aarch64-unknown-linux-gnu
+    - env: TARGET=aarch64-unknown-linux-gnu DISABLE_TESTS=1
     - env: TARGET=arm-linux-androideabi DISABLE_TESTS=1
 
     # Testing other channels
