--- a/src/rhq/Cargo.toml
+++ b/src/rhq/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "rhq"
 description = "A repository management tool"
-version = "0.2.8"
+version = "0.2.9"
 authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
 license = "MIT"
 repository = "https://github.com/ubnt-intrepid/rhq.git"
 homepage = "https://github.com/ubnt-intrepid/rhq"
 documentation = "https://docs.rs/rhq"
+readme = "../../README.md"
 
 [[bin]]
 name = "rhq"
@@ -16,4 +17,4 @@ path = "main.rs"
 clap = "^2.20.3"
 env_logger = "^0.4.0"
 shlex = "0.1"
-rhq-core = { version = "0.2.8", path = "../rhq-core" }
+rhq-core = { version = "0.2.9", path = "../rhq-core" }
