--- a/src/rhq-core/Cargo.toml
+++ b/src/rhq-core/Cargo.toml
@@ -26,4 +26,4 @@ serde_derive = "1.0"
 serde_json = "1.0"
 lazy_static = "^0.2.5"
 glob = "0.2.11"
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
