--- a/config.toml.example
+++ b/config.toml.example
@@ -3,6 +3,9 @@
 # The path of root directory to manage cloned repositories.
 root = "~/rhq"
 
+# The default hostname when omitted
+default_host = "github.com"
+
 # Patterns to search local repositories.
 includes = [
   "~/rhq",
