--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,13 +35,13 @@ install:
 test_script:
   # we don't run the "test phase" when doing deploys
   - if [%APPVEYOR_REPO_TAG%]==[false] (
-      cargo build --target %TARGET% --release &&
-      cargo test --target %TARGET% --release
+      cargo build --all --target %TARGET% --release &&
+      cargo test --all --target %TARGET% --release
     )
 
 before_deploy:
   # TODO Update this to build the artifacts that matter to you
-  - cargo rustc --target %TARGET% --release --bin rhq -- -C lto
+  - cargo rustc --target %TARGET% --release --manifest-path src/rhq/Cargo.toml --bin rhq -- -C lto
   - ps: ci\before_deploy.ps1
 
 deploy:
