--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,8 @@ path = "src/main.rs"
 chrono = { version = "0.4", features = ["serde"] }
 clap = "2"
 dirs = "1.0.4"
+failure = "0.1.2"
 env_logger = "0.5"
-error-chain = "0.12"
 glob = "0.2"
 lazy_static = "1"
 regex = "1"
