--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,30 @@
 language: rust
+
 branches:
   only:
     - master
+
 cache:
   - cargo: true
+
 env:
   - CARGO_TERM_VERBOSE=true
-rust:
-  - 1.26.2
-  - stable
-  - beta
-  - nightly
+
 script: >-
   cargo update &&
   cargo test
+
+matrix:
+  allow_failures:
+    - rust: nightly
+  fast_finish: true
+  include:
+    - rust: stable
+    - rust: beta
+    - rust: nightly
+    - rust: 1.26.2
+    - rust: stable
+      os: osx
+    - rust: stable
+      os: windows
+      
