--- a/templates/config.toml
+++ b/templates/config.toml
@@ -1,21 +1,15 @@
-# vim: ft=toml ts=2 sw=2 et :
-
 # The path of root directory to manage cloned repositories.
-root = "~/rhq"
+root = "{{ root_dir }}"
 
 # The default hostname when omitted
 default_host = "github.com"
 
 # Patterns to search local repositories.
 includes = [
-  "~/rhq",
-  "~/go/src",
-  "~/.vim/plugged",
-  "~/.zplug/repos",
-  "~/.dotfiles",
+    "~/.dotfiles",
 ]
 
 # Patterns to ignore repositories.
 excludes = [
-  "~/.cache/**/*",
+    "~/.cache/**/*",
 ]
