--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,16 +19,17 @@ path = "src/lib.rs"
 
 [[bin]]
 name = "rhq"
-path = "src/main.rs"
+path = "src/bin/rhq/main.rs"
 
 [dependencies]
+anyhow = "1"
+better-panic = "0.2"
 chrono = { version = "0.4", features = ["serde"] }
 clap = "2"
 dirs = "1.0.4"
-failure = "0.1.2"
-env_logger = "0.5"
 glob = "0.2"
 lazy_static = "1"
+pretty_env_logger = "0.4"
 regex = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
