--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,17 +23,17 @@ path = "src/bin/rhq/main.rs"
 
 [dependencies]
 anyhow = "1"
-better-panic = "0.2"
+better-panic = "0.3"
 chrono = { version = "0.4", features = ["serde"] }
 clap = "2"
-dirs = "2"
+dirs = "6"
 glob = "0.3"
 lazy_static = "1"
-pretty_env_logger = "0.4"
+pretty_env_logger = "0.5"
 regex = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-shellexpand = "1"
-toml = "0.5"
+shellexpand = ">=3.1.1"
+toml = "0.9"
 url = "2"
 walkdir = "2"
