--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,10 +24,11 @@ path = "src/main.rs"
 anyhow = "1"
 better-panic = "0.3"
 chrono = { version = "0.4", features = ["serde"] }
-clap = { version = "4", features = [ "cargo" ] }
+clap = { version = "4", features = [ "cargo", "derive" ] }
 clap_complete = "4"
 dirs = "6"
 glob = "0.3"
+log = "0.4"
 pretty_env_logger = "0.5"
 regex = "1"
 serde = { version = "1", features = ["derive"] }
