--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,10 +8,10 @@ jobs:
     strategy:
       matrix:
         conf:
-          - { os: ubuntu-latest,  target: x86_64-unknown-linux-gnu }
-          - { os: windows-latest, target: x86_64-pc-windows-msvc }
-          - { os: macos-latest,   target: x86_64-apple-darwin }
-          - { os: macos-latest,   target: aarch64-apple-darwin }
+          - { os: ubuntu-latest,  ext: "",     target: x86_64-unknown-linux-gnu }
+          - { os: windows-latest, ext: ".exe", target: x86_64-pc-windows-msvc }
+          - { os: macos-latest,   ext: "",     target: x86_64-apple-darwin }
+          - { os: macos-latest,   ext: "",     target: aarch64-apple-darwin }
     runs-on: ${{ matrix.conf.os }}
     steps:
       - uses: actions/checkout@v4
@@ -20,8 +20,8 @@ jobs:
         run: |
           rustup target add ${{ matrix.conf.target }}
           cargo build --release --target ${{ matrix.conf.target }}
-          mv ./target/${{ matrix.conf.target }}/release/rhq ./rhq-${{ matrix.conf.target }}
+          mv ./target/${{ matrix.conf.target }}/release/rhq${{ matrix.conf.ext }} ./rhq-${{ matrix.conf.target }}${{ matrix.conf.ext }}
       - uses: shogo82148/actions-upload-release-asset@v1
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./rhq-${{ matrix.conf.target }}
+          asset_path: ./rhq-${{ matrix.conf.target }}${{ matrix.conf.ext }}
